{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Play",
            "id": "4af324d8-65c6-4e54-9f75-c8708a4d24b1",
            "actions": [
                {
                    "name": "ExitGame",
                    "type": "Button",
                    "id": "fbbd1619-2290-43ba-b761-494e20a0265c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "632f663d-7616-429e-b621-2adb9a279f66",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "6cd658fe-84c8-4055-a441-4b6e67dceb61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Duck",
                    "type": "Button",
                    "id": "bc33c352-859a-48ea-93a2-cca51f56419d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "63ea0d59-36e2-45bd-bff3-4784658b0d01",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5989febf-9eba-4f3b-abbd-add166904bf6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c36a048b-516f-4ef7-9c61-79c54b2e2b06",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Duck",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Horizontal",
                    "id": "f844eaee-5b40-40dd-874f-e9e2c7269514",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1e5065c0-9bda-4f76-8128-a52b5cb9b0e6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1fc9bc81-31b1-4e39-8f92-94e870adf55b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Touch",
            "id": "29cf521e-8873-48e8-acc4-1df5cc9a726f",
            "actions": [
                {
                    "name": "Primary",
                    "type": "PassThrough",
                    "id": "fe320294-a2a5-4f9b-a3fb-2114d48a7638",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "bbb9ff33-df38-4fd4-bc7c-48dcc6abfee4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "3a1cd2c0-9a33-48d9-9523-be76012a03e7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Target",
                    "type": "Button",
                    "id": "64288777-5d66-498b-a428-4d98926c3790",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ed4d460-5154-4004-94f8-0a8ce42cb444",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Primary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cec58594-5742-4eab-976f-7df005799ad7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02d30129-e469-4252-bb82-c005b95a6790",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61f3ee6f-2365-4d8b-bc48-2543c84278d6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}